<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <Preference
        android:icon="@drawable/ic_settings_eta_layout_24"
        android:key="pref_settings_eta_layout"
        android:title="@string/title_activity_eta_layout"
        tools:summary="Dark Mode" />

    <Preference
        android:icon="@drawable/ic_settings_version_24"
        android:key="pref_settings_version"
        android:title="@string/title_settings_version"
        tools:summary="Dark Mode" />

    <Preference
        android:icon="@drawable/ic_settings_reset_24"
        android:key="pref_settings_reset"
        android:title="@string/title_settings_reset" />

    <Preference
        android:icon="@drawable/ic_integration_instructions_24"
        android:key="pref_settings_acknowledgement"
        android:summary="@string/settings_acknowledgement_summary1"
        android:title="@string/settings_acknowledgement_title1" />

    <Preference
        android:icon="@drawable/ic_integration_instructions_24"
        android:key="pref_settings_acknowledgement2"
        android:summary="@string/settings_acknowledgement_summary2"
        android:title="@string/settings_acknowledgement_title2" />


</PreferenceScreen>