<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/main_tab_title_bookmark"
        app:exb_color="@color/primary" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/main_tab_title_search"
        app:exb_color="@color/primary" />

    <item
        android:id="@+id/menu_search_map"
        android:icon="@drawable/ic_map_24"
        android:title="@string/main_tab_title_map"
        app:exb_color="@color/primary" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/main_tab_title_settings"
        app:exb_color="@color/primary" />
</menu>