<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/stationLineLl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/lineBgView"
        app:layout_constraintEnd_toStartOf="@id/lineArrowBgView"
        app:layout_constraintStart_toStartOf="@id/lineBgView"
        app:layout_constraintTop_toTopOf="@id/lineBgView">

        <TextView
            android:id="@+id/stopNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:letterSpacing="0.1"
            android:maxLines="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/demo_card_stop_name"
            android:textColor="@color/eta_card_line_text"
            android:textSize="@dimen/eta_compact_stop_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/routeDirectionTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/demo_card_route_desc"
            android:textColor="@color/eta_card_line_text"
            android:textSize="@dimen/eta_compact_stop_name"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/lineArrowBgView"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/eta_card_line_arrow"
        app:layout_constraintBottom_toBottomOf="@id/lineBgView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lineBgView"
        app:layout_constraintTop_toTopOf="@id/lineBgView" />

    <View
        android:id="@+id/lineBgView"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:background="@color/brand_color_kmb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lineArrowBgView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stationEtaCl" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stationEtaCl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/lineBgView"
        app:layout_constraintEnd_toEndOf="@id/lineBgView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/eta1Ll"
            style="@style/Eta.Card.Minute.Container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/eta2Ll"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/routeNumberContainer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/eta1MinuteTv"
                style="@style/Eta.Card.Minute.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/demo_card_eta_minute_compact_1"
                android:textColor="@color/eta_card_minutes_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/eta1UnitTv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eta1UnitTv"
                style="@style/Eta.Card.Unit.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eta_card_minute_unit"
                app:layout_constraintBaseline_toBaselineOf="@id/eta1MinuteTv"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/eta2Ll"
            style="@style/Eta.Card.Minute.Container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end|center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/eta3Ll"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/eta1Ll"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/eta2MinuteTv"
                style="@style/Eta.Card.Minute.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/demo_card_eta_minute_compact_2"
                android:textColor="@color/eta_card_minutes_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/eta2UnitTv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eta2UnitTv"
                style="@style/Eta.Card.Unit.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eta_card_minute_unit"
                app:layout_constraintBaseline_toBaselineOf="@id/eta2MinuteTv"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/eta3Ll"
            style="@style/Eta.Card.Minute.Container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/eta2Ll"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/eta3MinuteTv"
                style="@style/Eta.Card.Minute.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/demo_card_eta_minute_compact_3"
                android:textColor="@color/eta_card_minutes_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/eta3UnitTv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eta3UnitTv"
                style="@style/Eta.Card.Unit.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eta_card_minute_unit"
                app:layout_constraintBaseline_toBaselineOf="@id/eta3MinuteTv"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/routeNumberContainer"
            layout="@layout/content_eta_compact_route_number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/eta1Ll"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

